# pico-servo

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  SETUP.md  compile.sh  flash.sh  justfile  secrets.h.example  todo.md
docs/: ESC.md  PICO_RESOURCE_USAGE.md  PICO_W_LIMITS.md  SETUP.md  UI.md  blink-led.md  restructure-plan.md  wiring.md
docs/Wiring/: ESC_wiring.md
docs/plans/: esc-support.md  multi-servo-support.md  webserver.md  website-ui-upgrade.md
docs/plans/completed/: blink-led.md  esc-support.md  local-compile-remote-flash.md  picow-migration-plan.md  webserver-tabs.md  webserver-terminal.md  webserver.md  website-ui-upgrade.md
lib/esc/: CMakeLists.txt  esc.c  esc.h
lib/led/: CMakeLists.txt  led.c  led.h
lib/serial/: CMakeLists.txt  serial.c  serial.h
lib/servo/: CMakeLists.txt  servo.c  servo.h
lib/wifi/: CMakeLists.txt  lwipopts.h  wifi.c  wifi.h
main/: CMakeLists.txt  main.c
targets/blink/: CMakeLists.txt  main.c
targets/main/: CMakeLists.txt  main.c
targets/sweep/: CMakeLists.txt  main.c
targets/webserver/: CMakeLists.txt  webserver.c
targets/webserver/content/: index.html
targets/website/: CMakeLists.txt  website.c
targets/website/content/: index.html  status.txt
